# BumbleBee

./: .gitignore  CMakeLists.txt  README.md  package.xml  setup.py
include/bumblebee/: configurationManager.hpp  visoConfigurationManager.hpp
launch/: CreateDatasetBag.xml  calFromFile.xml  configPublish.xml
scripts/: analyseCalibration.py  bumblebee_calibration.py  bumblebee_configuration.py  bumblebee_node.py  calibrate.py  filterCalibration.py  processSingleCalibration.py  region_of_interest.py  stereo_calibrate.py  ~GenCalibrationImage.py  ~analyseCalibration.py  ~bumblebee_configuration.py  ~calibrate.py  ~filterCalibration.py  ~plotStereoCoordinateSystem  ~splitCalibration.py  ~stereo_calibrate.py
src/: CMakeLists.txt  bumblebee_config_node.cpp  configurationManager.cpp  visoConfigurationManager.cpp
src/bumblebee/: baseTypes.py  calibration.py  camera.py  drawing.py  messaging.py  motion.py  simulation.py  stereo.py  utils.py
src/nodes/: bumblebee_config_node.cpp  bumblebee_node.cpp  bumblebee_rectification_node.cpp  stereoTF_node.cpp  viso_config_node.cpp
srv/: getCameraInfo.srv  getOffset.srv  getQ.srv  getRectificationMap.srv  imageRectification.srv  saveGraph.srv
